/*
 * Copyright (c) 2023 sixwaaaay
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *     http://www.apache.org/licenses/LICENSE-2.
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package message;
option go_package = "./message";

message MessageListRequest {
  int64 user_id = 1; // user_id
  int64 to_user_id = 2; // target user_id
  int64 pre_msg_time = 3; // last message time
}

message MessageListResponse {
  int32 status_code = 1; // status code
  string status_msg = 2; // status message
  repeated Message message_list = 3; // message list
}

message Message {
  int64 id = 1; // message id
  int64 to_user_id = 2; // target user id
  int64 from_user_id = 3; // source user id
  string content = 4; // message content
  int64 create_time = 5; // message create time
}

message MessageActionRequest {
  int64 user_id = 1; // user_id
  int64 to_user_id = 2; // target user_id
  int32 action_type = 3; // action type
  string content = 4; // message content
}

message MessageActionResponse {
  int32 status_code = 1; // status code
  string status_msg = 2; // status message
}

service MessageService {
  // fetch message list
  rpc List(MessageListRequest) returns (MessageListResponse);
  // send message
  rpc Put(MessageActionRequest) returns (MessageActionResponse);
}